# o3-mini-4D-tesseract

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  DESIGN.md  LEARNING.md  Makefile  PROJECT_MAP.md  README.md  TECHSTACK.md  VISION.md  benchmark_admin.py  benchmark_catalog.json  benchmark_core.py  benchmark_execute.py  benchmark_generate.py  benchmark_history.json  benchmark_history.jsonl  benchmark_ledger.py  benchmark_manifest.json  benchmark_preview.py  benchmark_showcase.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: benchmark-integrity.yml
docs/: dev-documentation.md
docs/assets/: code-excerpt-screenshot.txt
executions/: README.md  manifest.json
executions/dispatches/claude-opus-4.1/: 20260401T173319Z--baseline-webgpu-hypertesseract-one-liner-ts-webgpu.json  20260401T173319Z--baseline-webgpu-hypertesseract-one-liner-ts-webgpu.md  (+2 more)
generation/: README.md  manifest.json
generation/prompts/: system.md
glm-5.1/: README.md
models/: README.md  registry.json
o3/: README.md
o3/runs/: 20260401T153600Z--legacy-o3-mini-4d-tesseract-import.json
openspec/: README.md
providers/: README.md  pricing.json  registry.json
showcase/: README.md  manifest.json
showcase/comparisons/: 20260401T191500Z--o3-vs-glm-5-1-ts-webgpu.json  20260401T191500Z--o3-vs-glm-5-1-ts-webgpu.md  20260401T191600Z--o3-vs-gpt-5-4-ts-webgpu.json  20260401T191600Z--o3-vs-gpt-5-4-ts-webgpu.md  20260401T191700Z--gpt-5-4-vs-glm-5-1-ts-webgpu.json  20260401T191700Z--gpt-5-4-vs-glm-5-1-ts-webgpu.md  20260401T205100Z--gpt-5-4-medium-vs-glm-5-1-ts-webgpu.json  20260401T205100Z--gpt-5-4-medium-vs-glm-5-1-ts-webgpu.md
showcase/site/: index.css  index.html  index.json
src/: main.py
tests/: README.md  test_benchmark_core_env.py  test_benchmark_execute.py  test_benchmark_execute_response_ingestion.py  test_benchmark_preview.py  test_benchmark_showcase.py
tests/fixtures/: mock_glm_response.json
(+572 files in other folders)
