[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tesseract-benchmark"
version = "0.1.0"
description = "Data-driven 3D frontend benchmark workspace for WebGPU and WASM hypertesseract experiments."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "S Praa" },
]
dependencies = [
    "dspy==3.1.3",
]

[project.scripts]
tesseract-ledger = "benchmark_ledger:main"
tesseract-generate = "benchmark_generate:main"
tesseract-execute = "benchmark_execute:main"
tesseract-admin = "benchmark_admin:main"
tesseract-showcase = "benchmark_showcase:main"
tesseract-preview = "benchmark_preview:main"

[tool.hatch.build.targets.wheel]
include = [
  ".env.example",
  "benchmark_core.py",
  "benchmark_ledger.py",
  "benchmark_generate.py",
  "benchmark_execute.py",
  "benchmark_admin.py",
  "benchmark_showcase.py",
  "benchmark_preview.py",
  "benchmark_manifest.json",
  "generation",
  "models",
  "providers",
  "executions",
  "showcase",
  "openspec",
  "README.md",
]
